Fix on news display to not re-align randomly.

--- a/webpage/css/style.css
+++ b/webpage/css/style.css
@@ -511,7 +511,7 @@ main{
   margin:5px;
   width:250px;
   height: 300px;
-  display: inline-block;
+  display:inline-table;
   position: relative;
   margin-top:0px;
 }
